Bug 1163859: Only update webrtc.debug prefs from gecko thread. r=rjesup