media/webrtc/signaling/src/common/browser_logging/WebRtcLog.cpp
@@ -11,6 +11,7 @@
 #include "nscore.h"
 #ifdef MOZILLA_INTERNAL_API
 #include "nsString.h"
+#include "nsXULAppAPI.h"
 #if !defined(MOZILLA_XPCOMRT_API)
 #include "mozilla/Preferences.h"
 #endif // !defined(MOZILLA_XPCOMRT_API)
@@ -146,9 +147,11 @@ void ConfigWebRtcLog(uint32_t trace_mask, nsCString &aLogFile, nsCString &aAECLo
     }
   }
 #if !defined(MOZILLA_EXTERNAL_LINKAGE)
-  // Capture the final choices for the trace settings.
-  mozilla::Preferences::SetCString("media.webrtc.debug.log_file", aLogFile);
-  mozilla::Preferences::SetCString("media.webrtc.debug.aec_log_dir", aAECLogDir);
+  if (XRE_GetProcessType() == GeckoProcessType_Default) {
+    // Capture the final choices for the trace settings.
+    mozilla::Preferences::SetCString("media.webrtc.debug.log_file", aLogFile);
+    mozilla::Preferences::SetCString("media.webrtc.debug.aec_log_dir", aAECLogDir);
+  }
 #endif
   return;
 }
